--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,12 +7,12 @@
   --button-secondary-hover: #f2f2f2;
 
   display: grid;
-  grid-template-rows: 20px 1fr 20px;
+  /* grid-template-rows: 20px 1fr 20px; */
   align-items: center;
   justify-items: center;
   min-height: 100svh;
-  padding: 80px;
-  gap: 64px;
+  /* padding: 80px; */
+  /* gap: 64px; */
   font-family: var(--font-geist-sans);
 }
 
@@ -28,6 +28,7 @@
 }
 
 .main {
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 32px;
@@ -124,15 +125,6 @@ a.secondary {
 }
 
 @media (max-width: 600px) {
-  .page {
-    padding: 32px;
-    padding-bottom: 80px;
-  }
-
-  .main {
-    align-items: center;
-  }
-
   .main ol {
     text-align: center;
   }
